# Uni7Marcelo

./: CMakeLists.txt  README.md  build.sh  main.c  midi_commands.h  pico_sdk_import.cmake  tusb_config.h  usb_descriptors.c
